--- a/public/backend/css/custom.css
+++ b/public/backend/css/custom.css
@@ -154,3 +154,7 @@ table.dataTable tbody td {
     -webkit-transform: translateY(4px) rotate(45deg);
     transform: translateX(-12px) translateY(4px) rotate(140deg) !important;
 }
+.select2-dropdown {
+    position: relative !important;
+    z-index: 1000000000000000 !important;
+}
