--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -39,6 +39,7 @@
 /* Customize the scrollbar track */
 ::-webkit-scrollbar {
   width: 8px;
+  height: 2px;
 }
 
 /* Customize the scrollbar thumb */
@@ -61,6 +62,7 @@
 ::-webkit-scrollbar-corner {
   background-color: var(--mr-default);
 }
+
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -111,6 +113,7 @@ h6 {
   width: 50px;
   background-color: var(--mr-default2);
 }
+
 /* scroll indicator */
 #scroll-indicator {
   position: fixed;
@@ -119,6 +122,7 @@ h6 {
   background-color: var(--mr-default);
   z-index: 9999999;
 }
+
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
@@ -652,10 +656,13 @@ h6 {
   #hero {
     height: auto;
   }
+
   #hero .carousel-item {
     height: 420px;
   }
-  .carousel-control-next, .carousel-control-prev {
+
+  .carousel-control-next,
+  .carousel-control-prev {
     width: 8%;
   }
 }
@@ -846,6 +853,7 @@ section {
 .services .services-wrap {
   margin: 0px 20px;
 }
+
 .services .service-box {
   margin-bottom: 20px;
   text-align: center;
@@ -1492,6 +1500,257 @@ section {
   }
 }
 
+/*--------------------------------------------------------------
+# EVENT DATA
+--------------------------------------------------------------*/
+.blog-slider {
+  max-width: 800px;
+  background: #fff;
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+  padding: 25px;
+  border-radius: 25px;
+  margin: 0 auto;
+position: relative;
+}
+
+@media screen and (max-width: 992px) {
+  .blog-slider {
+      max-width: 680px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .blog-slider {
+      min-height: 500px;
+      margin: 120px auto;
+  }
+}
+
+@media screen and (max-height: 500px) and (min-width: 992px) {
+  .blog-slider {
+      height: 350px;
+  }
+}
+
+.blog-slider__item {
+  display: flex;
+  align-items: center;
+}
+
+.blog-slider__item.swiper-slide-active .blog-slider__img img {
+  opacity: 1;
+  transition-delay: 0.3s;
+}
+
+.blog-slider__item.swiper-slide-active .blog-slider__content > * {
+  opacity: 1;
+  transform: none;
+}
+
+.blog-slider__img {
+  width: 40%;
+  flex-shrink: 0;
+  height: 300px;
+  background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
+  box-shadow: 4px 13px 30px 1px rgba(252, 56, 56, 0.2);
+  border-radius: 20px;
+  transform: translateX(-80px);
+  overflow: hidden;
+}
+
+.blog-slider__img::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
+  border-radius: 20px;
+  opacity: 0.0;
+}
+
+.blog-slider__img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  opacity: 0;
+  border-radius: 20px;
+  transition: all 0.3s;
+}
+
+@media screen and (max-width: 992px) {
+  .blog-slider__img {
+      width: 45%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .blog-slider__img {
+      transform: translateY(-50%);
+      width: 90%;
+  }
+  .blog-slider__item {
+      display: block;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .blog-slider__img {
+      width: 95%;
+  }
+  .blog-slider__item {
+      display: block;
+  }
+}
+
+@media screen and (max-height: 500px) and (min-width: 992px) {
+  .blog-slider__img {
+      height: 270px;
+  }
+}
+
+.blog-slider__content {
+  width: 60%;
+  padding-right: 25px;
+}
+
+@media screen and (max-width: 992px) {
+  .blog-slider__content {
+      width: 55%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .blog-slider__content {
+      margin-top: 0;
+      text-align: center;
+      padding: 0 30px;
+      width: 100%;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .blog-slider__content {
+      padding: 0;
+      width: 100%;
+  }
+}
+
+.blog-slider__content > * {
+  opacity: 0;
+  transform: translateY(25px);
+  transition: all 0.4s;
+}
+
+.blog-slider__code {
+  color: #7b7992;
+  margin-bottom: 15px;
+  display: block;
+  font-weight: 500;
+}
+
+.blog-slider__title {
+  font-size: 24px;
+  font-weight: 700;
+  color: #0d0925;
+  margin-bottom: 20px;
+}
+
+.blog-slider__text {
+  color: #4e4a67;
+  margin-bottom: 30px;
+  line-height: 1.5em;
+}
+
+.blog-slider__button {
+  display: inline-flex;
+  background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
+  padding: 15px 35px;
+  border-radius: 50px;
+  color: #fff;
+  box-shadow: 0px 14px 80px rgba(252, 56, 56, 0.4);
+  text-decoration: none;
+  font-weight: 500;
+  justify-content: center;
+  text-align: center;
+  letter-spacing: 1px;
+  transition: background-image 0.3s ease, color 0.3s ease;
+}
+
+.blog-slider__button:hover {
+  background-image: linear-gradient(147deg, #fc0000 0%, #fc0000 74%);
+  color: #fff;
+}
+
+
+
+@media screen and (max-width: 576px) {
+  .blog-slider__button {
+      width: 100%;
+  }
+}
+
+.swiper-container-horizontal > .swiper-pagination-bullets,
+.swiper-pagination-custom,
+.swiper-pagination-fraction {
+  bottom: 10px;
+  left: 0;
+  width: 100%;
+}
+
+.blog-slider__pagination {
+  position: absolute;
+  z-index: 21;
+  right: 20px;
+  width: 11px !important;
+  text-align: center;
+  left: auto !important;
+  top: 50% !important;
+  bottom: auto !important;
+  transform: translateY(-50%);
+}
+
+@media screen and (max-width: 768px) {
+  .blog-slider__pagination {
+      transform: translateX(-50%);
+      left: 50% !important;
+      top: 205px !important;
+      width: 100% !important;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+  }
+}
+
+.blog-slider__pagination.swiper-pagination-bullets .swiper-pagination-bullet {
+  margin: 8px 0;
+}
+
+.swiper-pagination-bullet {
+  width: 11px;
+  height: 11px;
+  display: block;
+  border-radius: 10px;
+  background: #062744;
+  opacity: 0.2;
+  transition: all 0.3s;
+}
+
+.swiper-pagination-bullet.swiper-pagination-bullet-active {
+  opacity: 1;
+  background: #fd3838;
+  height: 30px;
+  box-shadow: 0px 0px 20px rgba(252, 56, 56, 0.3);
+}
+
+@media screen and (max-width: 768px) {
+  .swiper-pagination-bullet.swiper-pagination-bullet-active {
+      height: 11px;
+      width: 30px;
+  }
+}
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
