--- a/public/frontend/assets/css/custom.css
+++ b/public/frontend/assets/css/custom.css
@@ -29,38 +29,6 @@
 }
 
 /*_______________________________________________________
-*NAV MENU HOVER STYLE
+*SLIDER
 *________________________________________________________
 */
-/* 
-.navbar ul li span {
-    position: absolute;
-    width: 25%;
-    height: 100%;
-    background-color: #004ff8;
-    z-index: -1;
-    left: 0;
-    top: 0;
-    transform: scaleY(0);
-    transition: all 0.5s;
-    transform-origin: top;
-}
-
-.navbar ul li:hover span {
-    transform: scaleY(1);
-}
-
-.navbar span:nth-child(2) {
-    left: 25%;
-    transition-delay: 0.15s;
-}
-
-.navbar span:nth-child(3) {
-    left: 50%;
-    transition-delay: 0.3s;
-}
-
-.navbar span:nth-child(4) {
-    left: 75%;
-    transition-delay: 0.45s;
-} */
