--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -1752,6 +1752,18 @@ position: relative;
   }
 }
 /*--------------------------------------------------------------
+# Gallery
+--------------------------------------------------------------*/
+
+.gallery{
+  background-image: radial-gradient(circle farthest-corner at 10% 20%, rgba(171, 102, 255, 1) 0%, rgba(116, 182, 247, 1) 90%);
+}
+
+
+
+
+
+/*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
 .contact .contact-info {
